<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="100dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/delete_item_question"
        android:textColor="#504C4C"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:scaleType="center"
            android:text="@string/cancel"
            android:textColor="#009688"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:scaleType="center"
            android:text="@string/erase"
            android:textColor="#009688"
            android:textSize="15sp"
            android:textStyle="bold" />


    </RelativeLayout>

</LinearLayout>